Quote cutting off bug fix

--- a/app.css
+++ b/app.css
@@ -38,3 +38,9 @@ body {
         width: 80%;
     }
 }
+
+@media (max-height: 500px) {
+    .container {
+        width: 80%;
+    }
+}
